[project]
name = "A2-Hoogsteen_public"
version = "2025.09.20"
description = "Code to simulate 1H R1Ï experiments with exchange and cross-relaxation contributions"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
]
